fixed Pen's backtrack bug